--- a/appBotao/www/css/style.css
+++ b/appBotao/www/css/style.css
@@ -1,1 +1,32 @@
 /* Empty. Add your own CSS if you like */
+.pointer{
+	cursor: pointer;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+.Mybutton {
+	margin-top: 50px;
+  padding: 55px 65px;
+  font-size: 40px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  background-color: #4CAF50;
+  box-shadow: 0 9px #999;
+}
+
+.reloj{
+  font-size: 45px;
+  font-family: Courier,sans-serif;
+  color: #363431;
+}
+
+.divRelogio{
+  margin-top: 50px;
+}
