--- a/appBotao/www/templates/botao.html
+++ b/appBotao/www/templates/botao.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Cronometro">
+<ion-view view-title="SMARTWORK">
   <ion-content>
   	<h1 align="center">Mesa 1</h1>
   	<div align="center">
